[gd_scene format=3 uid="uid://bpausemenu001"]

[ext_resource type="Script" uid="uid://cao7qq2o8vyvx" path="res://scripts/ui/pause_menu.gd" id="1_pause"]

[node name="PauseMenu" type="Control" unique_id=1420741629]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_pause")

[node name="Background" type="ColorRect" parent="." unique_id=405586837]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0.05, 0.75)

[node name="GlowEffect" type="ColorRect" parent="." unique_id=1021896356]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -208.0
offset_right = 208.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.69, 0, 0.15)

[node name="BorderOuter" type="ColorRect" parent="." unique_id=1899356064]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -230.0
offset_right = 204.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.69, 0, 0.6)

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=1527626838]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundGradient" type="ColorRect" parent="PanelContainer" unique_id=202529033]
layout_mode = 2
mouse_filter = 2
color = Color(0.02, 0.04, 0.08, 0.98)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer" unique_id=1594959733]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer" unique_id=542762291]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HeaderContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=212491315]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="LeftDecor" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer" unique_id=307327314]
custom_minimum_size = Vector2(20, 2)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
color = Color(1, 0.69, 0, 0.5)

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer" unique_id=1792600233]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.69, 0, 1)
theme_override_font_sizes/font_size = 28
text = "[ MISSION PAUSED ]"
horizontal_alignment = 1

[node name="RightDecor" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer" unique_id=1558525504]
custom_minimum_size = Vector2(20, 2)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
color = Color(1, 0.69, 0, 0.5)

[node name="HSeparator" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=434625645]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2
color = Color(1, 0.69, 0, 0.3)

[node name="WarningLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1093497007]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "WARNING: Abandoning mission will
result in colonist casualties!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CostLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1635858537]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.7, 0.2, 1)
theme_override_font_sizes/font_size = 16
text = "Abandoning costs 20 colonists"
horizontal_alignment = 1

[node name="HSeparator2" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1611034594]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2
color = Color(1, 0.69, 0, 0.3)

[node name="ShipStatusContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=987654321]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ShipStatusHeader" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ShipStatusContainer" unique_id=111111111]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "SHIP STATUS"
horizontal_alignment = 1

[node name="StatusGrid" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ShipStatusContainer" unique_id=222222222]
layout_mode = 2
columns = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 6

[node name="ColonistsLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ShipStatusContainer/StatusGrid" unique_id=333333333]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "COLONISTS:"
horizontal_alignment = 0

[node name="ColonistsValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ShipStatusContainer/StatusGrid" unique_id=444444444]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "1000"
horizontal_alignment = 2

[node name="FuelLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ShipStatusContainer/StatusGrid" unique_id=555555555]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "FUEL CELLS:"
horizontal_alignment = 0

[node name="FuelValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ShipStatusContainer/StatusGrid" unique_id=666666666]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "10"
horizontal_alignment = 2

[node name="IntegrityLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ShipStatusContainer/StatusGrid" unique_id=777777777]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "HULL INTEGRITY:"
horizontal_alignment = 0

[node name="IntegrityValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ShipStatusContainer/StatusGrid" unique_id=888888888]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "100%"
horizontal_alignment = 2

[node name="ScrapLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ShipStatusContainer/StatusGrid" unique_id=999999999]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "SCRAP:"
horizontal_alignment = 0

[node name="ScrapValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ShipStatusContainer/StatusGrid" unique_id=101010101]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "25"
horizontal_alignment = 2

[node name="StabilityLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ShipStatusContainer/StatusGrid" unique_id=121212121]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "CRYO-STABILITY:"
horizontal_alignment = 0

[node name="StabilityValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ShipStatusContainer/StatusGrid" unique_id=131313131]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "100%"
horizontal_alignment = 2

[node name="HSeparator3" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=141414141]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2
color = Color(1, 0.69, 0, 0.3)

[node name="ButtonContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=653487567]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ResumeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer" unique_id=1540793983]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.5, 1)
theme_override_colors/font_pressed_color = Color(0.1, 0.8, 0.3, 1)
theme_override_colors/font_hover_color = Color(0.4, 1, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "[ RESUME MISSION ]"

[node name="AbandonButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer" unique_id=1073317876]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.2, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.2, 0.1, 1)
theme_override_colors/font_hover_color = Color(1, 0.5, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "[ ABANDON MISSION ]"

[node name="CornerTL" type="ColorRect" parent="." unique_id=856527143]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -226.0
offset_right = -192.0
offset_bottom = -218.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.69, 0, 0.8)

[node name="CornerTR" type="ColorRect" parent="." unique_id=1566598832]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 192.0
offset_top = -226.0
offset_right = 200.0
offset_bottom = -218.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.69, 0, 0.8)

[node name="CornerBL" type="ColorRect" parent="." unique_id=1716809364]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 218.0
offset_right = -192.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.69, 0, 0.8)

[node name="CornerBR" type="ColorRect" parent="." unique_id=1342162887]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 192.0
offset_top = 218.0
offset_right = 200.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.69, 0, 0.8)
